Fixed bug #30394 (Assignment operators yield wrong result with __get/__set)